objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>PC_4_Absence__c</fullName>
        <label>PC 4 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Absence__c</fullName>
        <label>PC 1 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Authorised_Absence_Notes__c</fullName>
        <description>Please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>PC Authorised Absence Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Authorised_Absence_Type__c</fullName>
        <label>PC Authorised Absence Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wedding of immediate family</fullName>
                </value>
                <value>
                    <fullName>Family holidays</fullName>
                </value>
                <value>
                    <fullName>Bereavement of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Funeral of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Sixth Form College inductions</fullName>
                </value>
                <value>
                    <fullName>Job interviews</fullName>
                </value>
                <value>
                    <fullName>Signing-on</fullName>
                </value>
                <value>
                    <fullName>Exams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if the YP has attended enough PC days to allow them to graduate.</description>
        <label>PC Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <formula>IF( AND( PC_Completed__c = TRUE , Wave_Selection__r.Wave__r.PC_Return_day__c &lt;=TODAY()),&quot;PC COMPLETED&quot;, 

IF(AND(OR( ISPICKVAL(Wave_Selection__r.Status__c, &quot;Assigned&quot;),ISPICKVAL(Wave_Selection__r.Status__c , &quot;Started but left&quot;), ISPICKVAL(Wave_Selection__r.Status__c, &quot;Started but received red card&quot;)), NOT(ISBLANK(Wave_Selection__r.Wave__r.MM_confirmed_PCKO_starters__c))),&quot;PC STARTED&quot;, &quot;PC NOT STARTED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Unauthorised_Absence_Notes__c</fullName>
        <description>Please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>PC Unauthorised Absence Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_authorised_absences__c</fullName>
        <formula>IF( ISBLANK(TEXT( Reason_for_Absence_1__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_1__c , &quot;PC&quot;), 
IF(ISPICKVAL( Absence_1__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_2__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_2__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_2__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_3__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_3__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_3__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_4__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_4__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_4__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_5__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_5__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_5__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_6__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_6__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_6__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_7__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_7__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_7__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Reason_for_Absence_8__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_8__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_8__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of authorised absences recorded during PC</inlineHelpText>
        <label># PC authorised absences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_days_to_make_up__c</fullName>
        <description>Updated to tally unauthorised days for 2016, as these are the hours that now need to be made up</description>
        <label>PC days to make up (unauth)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_return__c</fullName>
        <formula>Wave_Selection__r.Wave__r.PC_Return_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_unauthorised_absences__c</fullName>
        <formula>IF( ISBLANK(TEXT(  Unauthorised_Reason_for_Absence_1__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_1__c , &quot;PC&quot;), 
IF(ISPICKVAL( Absence_1__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_2__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_2__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_2__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_3__c )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_3__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_3__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_4__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_4__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_4__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_5__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_5__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_5__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_6__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_6__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_6__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_7__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_7__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_7__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
) + 

IF( ISBLANK(TEXT( Unauthorised_Reason_for_Absence_8__c  )) ,0 
, 
IF(ISPICKVAL(Stage_of_absence_8__c , &quot;PC&quot;), 
IF(ISPICKVAL( Status_8__c ,&quot;Absent all day&quot;), 1, 0), 0 

) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of unauthorised absences recorded during PC</inlineHelpText>
        <label># PC unauthorised absences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Check__c</fullName>
        <formula>IF(AND( 

OR( Contact__r.Assigned_Wave__r.Wave_APM__c= $User.Id ,
Contact__r.Assigned_Wave__r.PM__c= $User.Id ,
Contact__r.Assigned_Wave__r.PA__c= $User.Id ,
Contact__r.Assigned_Wave__r.SPM1__c= $User.Id ,
Contact__r.Assigned_Wave__r.Summer_Manager__c= $User.Id ,
Contact__r.Assigned_Wave__r.Zonal_APM__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_APM_5__c= $User.Id ,
Contact__r.Assigned_Wave__r.Programme_Administrator_2__c= $User.Id , 
Contact__r.Assigned_Wave__r.Support_APM__c= $User.Id ,
Contact__r.Assigned_Wave__r.support_APM_2__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_APM_3__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_APM_4__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_PAM_1__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_PAM_2__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_PAM_3__c= $User.Id ,
Contact__r.Assigned_Wave__r.Delivery_PM__c= $User.Id ,
Contact__r.Assigned_Wave__r.Support_PM_2__c= $User.Id )

,YEAR(TODAY())= YEAR( Contact__r.Assigned_Wave__r.PC_KO_day__c ))
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programmes User View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_check_TEST__c</fullName>
        <formula>IF(OR(  $User.Id =  Contact__r.Assigned_Wave__r.PM__r.Id ,  $User.Id =  Contact__r.Assigned_Wave__r.PM__r.ManagerId ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM check TEST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <description>Parent&apos;s email address should be populated from Contacts by workflow</description>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_or_legal_guardian__c</fullName>
        <label>Parent or legal guardian?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_complete__c</fullName>
        <description>Days Attended and Authorised Absences</description>
        <formula>(Days_Attended__c +   (Authorised_Absences_Hours_Allowed_wf__c /8))/  Days_on_wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summer % complete - Attended/Auth. Abs.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Days_Attended_HIDDEN__c</fullName>
        <description>Used for Graduation Status formula. Updated by field update to work around formula character limit</description>
        <label>Percentage of Days Attended - HIDDEN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pilot_Wave__c</fullName>
        <formula>IF( Contact__r.Assigned_Wave__c  &lt;&gt;  &quot;&quot;,  Contact__r.Assigned_Wave__r.Pilot_wave__c,  IF (Contact__r.Reserved_Wave__c &lt;&gt; &quot;&quot;, Contact__r.Reserved_Wave__r.Pilot_wave__c, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pilot Wave?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Summer_Authorised_Absence_1__c</fullName>
        <label>Absence 1 reason for authorisation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wedding of immediate family</fullName>
                </value>
                <value>
                    <fullName>Family holidays</fullName>
                </value>
                <value>
                    <fullName>Bereavement of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Funeral of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Sixth Form College inductions</fullName>
                </value>
                <value>
                    <fullName>Job interviews</fullName>
                </value>
                <value>
                    <fullName>Signing-on</fullName>
                </value>
                <value>
                    <fullName>Exams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Summer_Authorised_Absence_2__c</fullName>
        <label>Absence 2 reason for authorisation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wedding of immediate family</fullName>
                </value>
                <value>
                    <fullName>Family holidays</fullName>
                </value>
                <value>
                    <fullName>Bereavement of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Funeral of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Sixth Form College inductions</fullName>
                </value>
                <value>
                    <fullName>Job interviews</fullName>
                </value>
                <value>
                    <fullName>Signing-on</fullName>
                </value>
                <value>
                    <fullName>Exams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prog_absence_update_status__c</fullName>
        <formula>IF(Wave_Selection__r.Wave__r.PC_KO_day__c &gt; Today(), &quot;Programme has not yet started&quot;,

IF( recorded_absences_during_prog__c &lt;&gt;  Total_number_of_recorded_absences__c , &quot;The recorded absences do not add up - please ensure that each absence appears in the Absence 1-8 section&quot;, &quot;Absences are correct&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prog absence update status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA1_attendance__c</fullName>
        <formula>IF (ISPICKVAL(RCA_1__c, &quot;&quot;),NULL,
IF (ISPICKVAL(RCA_1__c, &quot;Attended&quot;),1,
IF (ISPICKVAL(RCA_1__c, &quot;Half day&quot;),0.5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA1 attendance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA2_attendance__c</fullName>
        <formula>IF (ISPICKVAL(RCA_2__c, &quot;&quot;),NULL,
IF (ISPICKVAL(RCA_2__c, &quot;Attended&quot;),1,
IF (ISPICKVAL(RCA_2__c, &quot;Half day&quot;),0.5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA2 attendance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA3_attendance__c</fullName>
        <formula>IF (ISPICKVAL(RCA_3__c, &quot;&quot;),NULL,
IF (ISPICKVAL(RCA_3__c, &quot;Attended&quot;),1,
IF (ISPICKVAL(RCA_3__c, &quot;Half day&quot;),0.5,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA3 attendance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA_1_Absence__c</fullName>
        <label>RCA 1 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_1_Absence_number__c</fullName>
        <formula>IF (ISPICKVAL(RCA_1__c, &quot;&quot;),NULL, 
IF (ISPICKVAL(RCA_1__c, &quot;Attended&quot;),0, 
IF (ISPICKVAL(RCA_1__c, &quot;Half day&quot;),0.5,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA 1 Absence number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA_1__c</fullName>
        <label>RCA 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Late - 1.5 to 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late - more than 3 hours</fullName>
                </value>
                <value>
                    <fullName>Absence authorised</fullName>
                </value>
                <value>
                    <fullName>Absence unauthorised</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
                <value>
                    <fullName>Half day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_2_Absence__c</fullName>
        <label>RCA 2 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_2_Absence_number__c</fullName>
        <formula>IF (ISPICKVAL(RCA_2__c, &quot;&quot;),NULL, 
IF (ISPICKVAL(RCA_2__c, &quot;Attended&quot;),0, 
IF (ISPICKVAL(RCA_2__c, &quot;Half day&quot;),0.5,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA 2 Absence number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA_2__c</fullName>
        <label>RCA 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Late - 1.5 to 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late - more than 3 hours</fullName>
                </value>
                <value>
                    <fullName>Absence authorised</fullName>
                </value>
                <value>
                    <fullName>Absence unauthorised</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
                <value>
                    <fullName>Half day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_3_Absence__c</fullName>
        <label>RCA 3 Absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interviews</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth Form Collgege inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams and GCSE (Only) exam results</fullName>
                </value>
                <value>
                    <fullName>9. Other (Unauthorised)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_3_Absence_number__c</fullName>
        <formula>IF (ISPICKVAL(RCA_3__c, &quot;&quot;),NULL, 
IF (ISPICKVAL(RCA_3__c, &quot;Attended&quot;),0, 
IF (ISPICKVAL(RCA_3__c, &quot;Half day&quot;),0.5,1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA 3 Absence number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA_3__c</fullName>
        <label>RCA 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Late - 1.5 to 3 hours</fullName>
                </value>
                <value>
                    <fullName>Late - more than 3 hours</fullName>
                </value>
                <value>
                    <fullName>Absence authorised</fullName>
                </value>
                <value>
                    <fullName>Absence unauthorised</fullName>
                </value>
                <value>
                    <fullName>Absent all day</fullName>
                </value>
                <value>
                    <fullName>Half day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Absence_1__c</fullName>
        <formula>IF( Date_of_absence_1__c  &gt; TODAY(),TEXT(Date_of_absence_1__c) ,  &quot; &quot; )</formula>
        <label>RCA Absence1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_Absence_2__c</fullName>
        <formula>IF(  Date_of_Absence_2__c   &gt; TODAY(),TEXT( Date_of_Absence_2__c ) ,  &quot; &quot; )</formula>
        <label>RCA Absence 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_Absence_3__c</fullName>
        <formula>IF(   Date_of_Absence_3__c    &gt; TODAY(),TEXT(  Date_of_Absence_3__c  ) ,  &quot; &quot; )</formula>
        <label>RCA Absence 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_Authorised_Absence_Notes__c</fullName>
        <description>If not for the whole day, please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>RCA Authorised Absence Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_Authorised_Absence_Type__c</fullName>
        <label>RCA Authorised Absence Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wedding of immediate family</fullName>
                </value>
                <value>
                    <fullName>Family holidays</fullName>
                </value>
                <value>
                    <fullName>Bereavement close friend/family member</fullName>
                </value>
                <value>
                    <fullName>Funeral of close friend/family member</fullName>
                </value>
                <value>
                    <fullName>Sixth Form College inductions</fullName>
                </value>
                <value>
                    <fullName>Job interviews</fullName>
                </value>
                <value>
                    <fullName>Signing-on</fullName>
                </value>
                <value>
                    <fullName>Exams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if the YP has attended enough RCA days to allow them to graduate.</description>
        <label>RCA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_HTMU_email_sent__c</fullName>
        <label>RCA HTMU email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_Ineligible_email_sent__c</fullName>
        <label>RCA Ineligible email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_Status__c</fullName>
        <formula>IF(AND( RCA_Completed__c , Wave_Selection__r.Wave__r.RCA_4_Sun__c &lt;=TODAY()),&quot;RCA COMPLETED&quot;,

IF(AND(   Wave_Selection__r.Wave__r.RCA_1_Sat__c &lt;=TODAY(),	

OR(ISBLANK(Max_Day_that_card_was_given_YP_left__c),Max_Day_that_card_was_given_YP_left__c&lt;1)

,
 Number_of_RCA_days_attended__c &gt;0

),
&quot;RCA STARTED&quot;, &quot;RCA NOT STARTED&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_Unauthorised_Absence_Notes__c</fullName>
        <description>If not for the whole day, please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>RCA Unauthorised Absence Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_absence_approval_status__c</fullName>
        <label>RCA absence approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to be reviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Absence approved</fullName>
                </value>
                <value>
                    <fullName>Absence unapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_absence_end_time__c</fullName>
        <label>RCA absence end time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_absence_reason__c</fullName>
        <inlineHelpText>Only needs to be filled in when the form is completed online by PG</inlineHelpText>
        <label>RCA absence reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_absence_reason_for_authorisation__c</fullName>
        <label>RCA absence reason for authorisation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wedding of immediate family</fullName>
                </value>
                <value>
                    <fullName>Family holidays</fullName>
                </value>
                <value>
                    <fullName>Bereavement of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Funeral of close friend/family</fullName>
                </value>
                <value>
                    <fullName>Sixth Form College inductions</fullName>
                </value>
                <value>
                    <fullName>Job interviews</fullName>
                </value>
                <value>
                    <fullName>Signing-on</fullName>
                </value>
                <value>
                    <fullName>Exams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_absence_start_time__c</fullName>
        <label>RCA absence start time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_absence_transport_arrangements__c</fullName>
        <inlineHelpText>Notes about option 2 should be included by the PG in the notes about transport methods.</inlineHelpText>
        <label>RCA absence transport arrangements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG wil collect YP</fullName>
                </value>
                <value>
                    <fullName>Another adult with collect YP</fullName>
                </value>
                <value>
                    <fullName>YP will travel independently</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_absence_transport_details__c</fullName>
        <description>If not for the whole day, please give clear information about dates, timing and methods of transport involved, including where the parent will meet the YP.</description>
        <label>RCA absnce details of transport arrngmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_days_calculation__c</fullName>
        <formula>IF( ISPICKVAL( RCA_1__c  , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_1__c  , &quot;Late - 1.5 to 3 hours&quot;), 1, 0) + IF( ISPICKVAL( RCA_2__c  , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_2__c  , &quot;Late - 1.5 to 3 hours&quot;), 1, 0) + IF( ISPICKVAL( RCA_3__c  , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_3__c  , &quot;Late - 1.5 to 3 hours&quot;), 1, 0) + IF( ISPICKVAL( RCA_4__c  , &quot;Attended&quot;), 1, 0) + IF( ISPICKVAL( RCA_4__c  , &quot;Late - 1.5 to 3 hours&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA days calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA_days_to_make_up_auth__c</fullName>
        <description>Updated to tally unauthorised days for 2016, as these are the hours that now need to be made up</description>
        <label>RCA days to make up (unauth)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>